complete Update passsword registration
