# cmd/swag/docs/swagger.yaml
@@ -13,6 +13,13 @@ definitions:
     - verifyPurpose
     - verifyType
     type: object
+  dto.UpdateUserPasswordInput:
+    properties:
+      userPassword:
+        type: string
+      userToken:
+        type: string
+    type: object
   dto.VerifyInput:
     properties:
       verifyCode:
@@ -77,6 +84,32 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorResponseData'
       summary: User Register
+      tags:
+      - account management
+  /auth/update_password_register:
+    post:
+      consumes:
+      - application/json
+      description: UpdatePasswordRegistration
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdateUserPasswordInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: UpdatePasswordRegistration
       tags:
       - account management
   /auth/verify_account:
